# ludum-limited-space

./: .gitignore  Cargo.toml  README.md
assets/models/: license.txt
assets/models/source/: low_poly_humanoid_robot.glb
assets/models/source/low_poly_humanoid_robot/: license.txt
editor/: Cargo.toml
editor/src/: main.rs
executor/: Cargo.toml
executor-android/: Cargo.toml
executor-android/src/: lib.rs
executor-wasm/: Cargo.toml
executor-wasm/src/: lib.rs
executor/src/: main.rs
game/: Cargo.toml
src/: main.rs
src/player/: lifecycle_system.rs  mod.rs  movement_system.rs  player.rs  rendering_system.rs
src/ui/: mod.rs  onscreen.rs
src/world/: controllers.rs  lifecycle_system.rs  mod.rs
