[package]
name = "ludum-limited-space"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13", features = ["dynamic_linking"] }
bevy_rapier3d = { version = "0.25", features = ["simd-stable", "debug-render-3d"] }
log = "0.4.21"
bevy-scene-hook = "10.0.0"

[profile.dev]
opt-level = 1

[profile.dev.package.bevy_rapier3d]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
